--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,9 @@ description: My QA articles
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
   Resources:
     - Blog Posts: ""
-  Author's Github: "http://www.github.com/symonk"
+  Simon's Github: "http://www.github.com/symonk"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
