--- a/_config.yml
+++ b/_config.yml
@@ -43,11 +43,12 @@ author:
   name: Simon Kerr
   email: "jackofspaces@gmail.com"
   facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
+  github: symonk
   twitter: yourname   # eg. daattali
   reddit: yourname    # eg. daattali
   google-plus: +yourname   # eg. +DeanAttali or 109424658772469020925
-  linkedin: yourname  # eg. simonk09
+  
+  linkedin: simonk09
   xing: yourname      # eg. daattali
   stackoverflow: yourlink  # eg. "3943160/daattali"
   snapchat: yourname  # eg. daattali
