--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,9 @@ description: My QA articles
 
 # List of links in the navigation bar
 navbar-links:
-  Resources:
-    - Blog Posts: ""
+  Articles:
+    - Basic SQL Queries: "https://symonk.github.io/2017-03-21-Basic-SQL-Queries/"
+    - REST API's: "https://symonk.github.io/2017-03-21-Basic-SQL-Queries/"
   Simon's Github: "http://www.github.com/symonk"
 
 # Image to show in the navigation bar - image must be a square (width = height)
