--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: My QA articles
 # List of links in the navigation bar
 navbar-links:
   Articles:
-    - Basic SQL Queries: "https://symonk.github.io/2017-03-21-Basic-SQL-Queries/"
-    - REST API's: "https://symonk.github.io/2017-03-21-Basic-SQL-Queries/"
+    - SQL Querying: "https://symonk.github.io/2017-03-21-Basic-SQL-Queries/"
+    - REST APIs: "https://symonk.github.io/2017-03-21-Basic-SQL-Queries/"
   Simon's Github: "http://www.github.com/symonk"
 
 # Image to show in the navigation bar - image must be a square (width = height)
