--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,9 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 # Truncates the excerpt to the specified number of words on the index page
 excerpt_length: 50
 
+# future posts
+future: true
+
 # Character used to separate site title and description in HTML document title
 # and RSS feed title
 title-separator: "-"
