--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,9 @@ defaults:
       layout: "page"
       show-avatar: true
 
+# Future posts
+future: true
+
 # Use tags pages (not recommended if you are deploying via GitHub pages, only set to true if deploying locally with ruby)
 link-tags: false
 
